--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -1,3 +1,8 @@
 FROM openjdk:17
-COPY target/web_backend.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+VOLUME /tmp
+WORKDIR /BE
+ARG JAR_FILE=target/web_backend.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java", "-jar","app.jar"]
+EXPOSE 8181
+
