--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/rsystem
+    url: jdbc:mysql://localhost:3306/rsystem?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: password
   jpa:
@@ -10,3 +10,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
+server:
+  port: 8181
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
