- created pages with permissions - interim result of registration and login

--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
     enabled: true
     prefix: classpath:/templates/
     suffix: .html
+    mode: HTML
+    cache: false
 server:
   port: 8181
   error:
