--- a/BE/pom.xml
+++ b/BE/pom.xml
@@ -17,6 +17,12 @@
 		<java.version>17</java.version>
 		<start-class>com.backend.BackendApplication</start-class>
 	</properties>
+	<repositories>
+		<repository>
+			<id>java.net2</id>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,6 +94,12 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
