--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
     suffix: .html
     mode: HTML
     cache: false
+  sql:
+    init:
+      mode: always
 server:
   port: 8181
   error:
