--- a/BE/src/main/resources/application.yml
+++ b/BE/src/main/resources/application.yml
@@ -27,6 +27,9 @@ spring:
   sql:
     init:
       mode: always
+  web:
+    resources:
+      static-locations: classpath:/public/
 server:
   port: 8181
   error:
